ChangeLog file for Endian libencloud

next:

libencloud 0.7.3:
	- [CONNECT-149] Connect App sets up routes belonging to previous connection

libencloud 0.7.2 (15/10/2014):
	- [CONNECT-165] Tell OpenVPN not to cache passwords in memory
	- [CONNECT-152] Logging improvements and verbosity handling

libencloud 0.7.1 (17/09/2014):
	- #77 fixed tap rename issue (net.sh not found) and make install issue
	  (file used by another application)

libencloud 0.7 (19/08/2014):
	- [CONNECT-131] Certificate-based VPN authentication
	- [CONNECT-144] renaming: modeqic => modeqcc, qic => qcc,
	  4iconnect => ConnectClient
	- api: new Config API (json); rename '/api_v1' => '/api/v1'; 
	  extra path parameter for x509 auth
	- client: new get(), post() functions, improved handling of Switchboard errors
	- utils: interface is now public
	- crypto: interface is now public, added new functions configFromAuth, 
	  certToString(), p12SaveCa(), p12SaveCert(), p12SaveKey()
	- config: "init"/"op" under new "ssl" key, handle absolute and relative paths
	- setup: avoid reusing client objects to prevent QNetworkAccessManager from
	  caching CA certificates
	- LIBENCLOUD_TIMEOUT = 60 (was 30)
	- deps: use openssl 1.0.1h

libencloud 0.6.4 (10/06/2014):
	- [CONNECT-115] Slow disconnect on w32
	- [CONNECT-142] Support for N-branding (about module)

libencloud 0.6.3 (27/05/2014):
	- [CONNECT-133] Remove data from previous connection
	- [CONNECT-135] API: Use JSONP instead of JSON only if requested
	- yocto: allow compilation of tests without QtGui (CONFIG += nogui)
	- build: fix header install paths, INSTALLDIR=/usr (unix), install test and config
	  generate .revision and use it if .git does not exist (build from dist)
	- test/sece: SECE_DISABLE_SERVICE by default, comment it to use external service
	- config: make all prefixes public, += logPrefix
	- http: GET params ending up in action string
	- unix: /var/log/encloud for logs, /var/efw/encloud for storage  

libencloud 0.6.2 (28/04/2014):