@@ -32,6 +32,11 @@ LIBENCLOUDABOUT_DLLSPEC const char* LibEncloudFullAppName(char* buffer, const ch
 LIBENCLOUDABOUT_DLLSPEC const char* LibEncloudTapName(char* buffer, const char* productName)
 {
     strncpy(buffer, LibEncloudOrganization, 120);
+#ifdef LIBENCLOUD_ENDIAN
+    // exception .. Tap name is plain ORG + "Connect"
+    strncat(buffer, "Connect", 120);
+#else
     strncat(buffer, productName, 120);
+#endif
     return buffer;
 }
