@@ -10,7 +10,7 @@
 # 
 # Note: mode selection has implications on both behaviour and packaging!
 #
-#   modeqcc     Endian ConnectClient / Exor JMConnect mode
+#   modeqcc     Endian Connect App / Exor JMConnect mode
 #   modeece     Endian Cloud Enabler mode
 #   modesece    Software Endian Cloud Enabler mode
 #
@@ -38,11 +38,6 @@ exists($${LOCALCONFIG}): include($${LOCALCONFIG})
 #
 PKGNAME = libencloud
 
-PRODUCT_ECC="ConnectClient"
-PRODUCT_JMC="HMIConnect"
-PRODUCT_ENCLOUD="Encloud"
-PRODUCT_SECE="SECE"  # FIXME
-
 # only x.x.x.x format allowed, where x is a number
 VERSION = 0.7.3
 #VERSION_TAG = Wip  # Dev version - comment this for official release!
@@ -50,8 +45,10 @@ VERSION = 0.7.3
 
 endian {
     ORG = Endian
+    DEFINES += LIBENCLOUD_ENDIAN
 } else:exor {
     ORG = Exor
+    DEFINES += LIBENCLOUD_EXOR
 } else {
     error("organisation must be defined (CONFIG += endian|exor)!")
 }
@@ -84,23 +81,25 @@ win32{
 modeqcc {
     DEFINES += LIBENCLOUD_MODE_QCC
     endian {
-        PROGDIR=$$(ProgramFiles)/$${ORG}/$${PRODUCT_ECC}
-        DEFINES += LIBENCLOUD_PRODUCT=\\\"$${PRODUCT_ECC}\\\"
+        PRODUCT_DIR="ConnectApp"
+        DEFINES += LIBENCLOUD_PRODUCT=\\\"$${PRODUCT_DIR}\\\"
     } else {
-        PROGDIR=$$(ProgramFiles)/$${ORG}/$${PRODUCT_JMC}
-        DEFINES += LIBENCLOUD_PRODUCT=\\\"$${PRODUCT_JMC}\\\"
+        PRODUCT_DIR="HMIConnect"
+        DEFINES += LIBENCLOUD_PRODUCT=\\\"$${PRODUCT_DIR}\\\"
     }
 } else:modeece {
-    PROGDIR=$$(ProgramFiles)/$${ORG}/$${PRODUCT_ENCLOUD}
+    PRODUCT_DIR="Encloud"
     DEFINES += LIBENCLOUD_MODE_ECE
-    DEFINES += LIBENCLOUD_PRODUCT=\\\"$${PRODUCT_ENCLOUD}\\\"
+    DEFINES += LIBENCLOUD_PRODUCT=\\\"$${PRODUCT_DIR}\\\"
 } else:modesece {
-    PROGDIR=$$(ProgramFiles)/$${ORG}/$${PRODUCT_SECE}
+    PRODUCT_DIR="SECE"
     DEFINES += LIBENCLOUD_MODE_SECE
-    DEFINES += LIBENCLOUD_PRODUCT=\\\"$${PRODUCT_SECE}\\\"
+    DEFINES += LIBENCLOUD_PRODUCT=\\\"$${PRODUCT_DIR}\\\"
 } else {
     error("a mode must be defined (CONFIG += modeqcc|modeece|modesece)!")
 }
+
+PROGDIR=$$(ProgramFiles)/$${ORG}/$${PRODUCT_DIR}
 
 nosetup     { DEFINES += LIBENCLOUD_DISABLE_SETUP }
 nocloud     { DEFINES += LIBENCLOUD_DISABLE_CLOUD }
