@@ -1,6 +1,7 @@
 ChangeLog file for Endian libencloud
 
 next:
+	- [CONNECT-169] Rename to Endian Connect App and Endian Connect Service
 
 libencloud 0.7.3:
 	- [CONNECT-149] Connect App sets up routes belonging to previous connection
